--- a/package.json
+++ b/package.json
@@ -10,11 +10,22 @@
   },
   "devDependencies": {
     "@types/node": "^20.5.7",
+    "@types/pg": "^8.11.10",
+    "drizzle-kit": "^0.30.1",
+    "prettier": "3.4.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.2.2",
     "vitest": "^1.5.0"
   },
   "dependencies": {
-    "encore.dev": "^1.45.2"
+    "@langchain/community": "^0.3.20",
+    "@langchain/core": "^0.3.26",
+    "@langchain/google-genai": "^0.1.6",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.3",
+    "encore.dev": "^1.45.2",
+    "langchain": "^0.3.8",
+    "pg": "^8.13.1"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.13.0"
