--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "devDependencies": {
     "@types/node": "^20.5.7",
+    "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.30.1",
+    "nodemailer": "^6.9.16",
     "prettier": "3.4.2",
     "tsx": "^4.19.2",
     "typescript": "^5.2.2",
